	- cleaning the solution will deploy the resource files again


2016.12.01
- finished "Save All" and "Save All and Exit"
- working on flush button
	- using array (activearray) to indicate which tab is currently active
	- SelectedIndexChanged is an array of 0s with a single 1, 1 indicating the active tab, 0 for all inactive tabs
	    0: td_reminders, 1: td_td, 2: music_all, 3: music_ind, 4: music_met
        5: links_all, 6: links_yt, 7: links_arts, 8: movies
	- allow content flushed to tab whose contents aren't open?


2016.12.02
- allowed content flushed to tab whose contents aren't open
	- appended text to end of file associated to selected tab
	append:
	https://msdn.microsoft.com/en-us/library/system.io.file.appendtext%28v=vs.110%29.aspx
	appendall
	https://msdn.microsoft.com/en-us/library/ms143356%28v=vs.110%29.aspx
	- newline in windows is '\r\n'
- implementing a status bar to give indication which tabpage is open (problem if tab page isn't active)
	how to make status bar show text:
	http://stackoverflow.com/questions/13336290/how-to-update-statusstrip-in-windows-forms
	also, have status bar docked at bottom otherwise text doesn't appear
- removing debugging statements and shifting it to status bar
- refactoring NDFlush to a shorter version using reflection


2016.12.03
- refactored NDFlush code disappeared; rewrote it
	- completed?
- TabPages is a reference type; a class
	- for refactored code, created an array of TabPages where each element points to an existing TabPage
	- in C#, declaring a variable and assigning its value to be another existing variable of reference type does not instantiate
	another value in memory; instead it works like a pointer
	source: notes, and
	https://msdn.microsoft.com/en-us/library/490f96s2.aspx
- need to: merge MainMovies doubleclick into the general doubleclick event handler
	- forgot to set nd_active[8] = true
- changed File.AppendAllText(...,X) to output correct newline